src/Components/Header/Header.css
* {
  box-sizing: border-box;
}

.Header {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  padding: 0 15px;
  width: 100%;
  background: linear-gradient(to bottom right, #1f4063, #1f2443);
  color: white;
}

.hero {
  display: inline-block;
  padding: 15px 0;
}

h1 {
  font-family: 'Raleway', sans-serif;
  margin-bottom: 0px;
}

.sub {
  margin-top: 5px;
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 0;
}

.user-controls {
  display: inline-block;
  color: white;
  text-align: right;
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  font-weight: bold;
  min-width: 275px;
}

.user-links {
  height: 100%;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-around;
  width: 275px;
  padding: 0 15px;
  list-style: none;
  margin-top: 0;
}

.active-link {
  color: black;
}

.user-link {
  display: inline;
  margin-right: 0 5px;
}

li > a:link,
li > a:visited {
  font-size: 20px;
  color: white;
  text-decoration: none;
}

li > a:hover {
  color: #ffd966;
}

